@@ -5,6 +5,8 @@
 	(PokerAvatarTestCase.autoMuck): Wrote function.
 	(PokerAvatarTestCase.test54_doQuit): Wrote function.
 	(PokerAvatarTestCase.tableQuit): Wrote function.
+	(PokerAvatarTestCase.joinTableForceFail): Wrote function.
+	(PokerAvatarTestCase.test55_tableJoinWhenFails): Wrote function.
 
 2008-03-10  Bradley M. Kuhn  <bkuhn@ebb.org>
 
